--- a/gst-plugins-good/po/bg.po
+++ b/gst-plugins-good/po/bg.po
@@ -1,14 +1,14 @@
 # Bulgarian translation of gst-plugins-good.
-# Copyright (C) 2007, 2008 Free Software Foundation, Inc.
+# Copyright (C) 2007, 2008, 2009 Free Software Foundation, Inc.
 # This file is distributed under the same license as the gst-plugins-good package.
-# Alexander Shopov <ash@contact.bg>, 2007, 2008.
+# Alexander Shopov <ash@contact.bg>, 2007, 2008, 2009.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-good 0.10.9.2\n"
+"Project-Id-Version: gst-plugins-good 0.10.14.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-05-11 22:52+0100\n"
-"PO-Revision-Date: 2008-09-12 09:54+0300\n"
+"POT-Creation-Date: 2009-05-16 01:55+0100\n"
+"PO-Revision-Date: 2009-05-15 22:41+0300\n"
 "Last-Translator: Alexander Shopov <ash@contact.bg>\n"
 "Language-Team: Bulgarian <dict@fsa-bg.org>\n"
 "MIME-Version: 1.0\n"
@@ -16,223 +16,175 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 
-#: ext/esd/esdsink.c:256 ext/esd/esdsink.c:361
 msgid "Could not establish connection to sound server"
 msgstr "Не може да се осъществи връзка към звуковия сървър."
 
-#: ext/esd/esdsink.c:263
 msgid "Failed to query sound server capabilities"
 msgstr "Неуспех при запитването за възможностите на звуковия сървър."
 
-#: ext/flac/gstflacdec.c:1111 ext/libpng/gstpngdec.c:336
-#: ext/libpng/gstpngdec.c:346 ext/libpng/gstpngdec.c:536
-#: ext/wavpack/gstwavpackparse.c:1165 gst/avi/gstavidemux.c:4218
 msgid "Internal data stream error."
 msgstr "Вътрешна грешка на потока от данни."
 
-#: ext/jpeg/gstjpegdec.c:1136
 msgid "Failed to decode JPEG image"
 msgstr "Неуспех при декодиране на изображение, формат JPEG."
 
-#: ext/shout2/gstshout2.c:558
 msgid "Could not connect to server"
 msgstr "Не може да се осъществи връзка към сървър."
 
-#: gst/avi/gstavimux.c:1610
 msgid "No or invalid input audio, AVI stream will be corrupt."
 msgstr "Аудио входът липсва или е грешен. Потокът с AVI ще бъде повреден."
 
-#: gst/qtdemux/qtdemux.c:1291 gst/qtdemux/qtdemux.c:2375
 msgid "This file contains no playable streams."
 msgstr "Този файл не съдържа изпълними потоци."
 
-#: gst/qtdemux/qtdemux.c:1412 gst/qtdemux/qtdemux.c:2524
-#, fuzzy
 msgid "This file is invalid and cannot be played."
-msgstr "Този файл е непълен и не може да бъде изпълнен."
+msgstr "Този файл е повреден и не може да бъде изпълнен."
 
-#: gst/qtdemux/qtdemux.c:1470
 msgid "This file is incomplete and cannot be played."
 msgstr "Този файл е непълен и не може да бъде изпълнен."
 
-#: gst/qtdemux/qtdemux.c:3256
 msgid "The video in this file might not play correctly."
 msgstr "Видео потокът в този файл може да не се покаже правилно."
 
-#: gst/qtdemux/qtdemux.c:3338
 #, c-format
 msgid "This file contains too many streams. Only playing first %d"
 msgstr ""
 "Този файл съдържа прекалено много потоци. Изпълняват се само първите %d"
 
-#: gst/qtdemux/qtdemux.c:3657 gst/qtdemux/qtdemux.c:4387
 msgid "This file is corrupt and cannot be played."
 msgstr "Този файл е повреден и не може да бъде изпълнен."
 
-#: gst/rtsp/gstrtspsrc.c:4317
 msgid ""
 "No supported stream was found. You might need to install a GStreamer RTSP "
 "extension plugin for Real media streams."
 msgstr ""
+"Не е открит поддържан поток. Може да трябва да инсталирате приставката на "
+"GStreamer — RTSP, който поддържа потоци на Real."
 
-#: gst/rtsp/gstrtspsrc.c:4322
 msgid ""
 "No supported stream was found. You might be missing the right GStreamer RTSP "
 "extension plugin."
 msgstr ""
+"Не е открит поддържан поток. Може би липсва приставката на GStreamer — RTSP."
 
-#: gst/wavparse/gstwavparse.c:1969
 msgid "Internal data flow error."
 msgstr "Вътрешна грешка в потока с данни."
 
-#: sys/oss/gstossmixertrack.c:98 sys/sunaudio/gstsunaudiomixertrack.c:65
 msgid "Volume"
 msgstr "Сила на звука"
 
-#: sys/oss/gstossmixertrack.c:99
 msgid "Bass"
 msgstr "Баси"
 
-#: sys/oss/gstossmixertrack.c:100
 msgid "Treble"
 msgstr "Високи"
 
-#: sys/oss/gstossmixertrack.c:101
 msgid "Synth"
 msgstr "Синтезатор"
 
-#: sys/oss/gstossmixertrack.c:102
 msgid "PCM"
 msgstr "PCM"
 
-#: sys/oss/gstossmixertrack.c:103
 msgid "Speaker"
 msgstr "Високоговорител"
 
-#: sys/oss/gstossmixertrack.c:104
 msgid "Line-in"
 msgstr "Вход"
 
-#: sys/oss/gstossmixertrack.c:105
 msgid "Microphone"
 msgstr "Микрофон"
 
-#: sys/oss/gstossmixertrack.c:106
 msgid "CD"
 msgstr "CD"
 
-#: sys/oss/gstossmixertrack.c:107
 msgid "Mixer"
 msgstr "Смесител"
 
-#: sys/oss/gstossmixertrack.c:108
 msgid "PCM-2"
 msgstr "PCM-2"
 
-#: sys/oss/gstossmixertrack.c:109
 msgid "Record"
 msgstr "Запис"
 
-#: sys/oss/gstossmixertrack.c:110
 msgid "In-gain"
 msgstr "Входно усилване"
 
-#: sys/oss/gstossmixertrack.c:111
 msgid "Out-gain"
 msgstr "Изходно усилване"
 
-#: sys/oss/gstossmixertrack.c:112
 msgid "Line-1"
 msgstr "Линия-1"
 
-#: sys/oss/gstossmixertrack.c:113
 msgid "Line-2"
 msgstr "Линия-2"
 
-#: sys/oss/gstossmixertrack.c:114
 msgid "Line-3"
 msgstr "Линия-3"
 
-#: sys/oss/gstossmixertrack.c:115
 msgid "Digital-1"
 msgstr "Цифрова-1"
 
-#: sys/oss/gstossmixertrack.c:116
 msgid "Digital-2"
 msgstr "Цифрова-2"
 
-#: sys/oss/gstossmixertrack.c:117
 msgid "Digital-3"
 msgstr "Цифрова-3"
 
-#: sys/oss/gstossmixertrack.c:118
 msgid "Phone-in"
 msgstr "Вход за слушалки"
 
-#: sys/oss/gstossmixertrack.c:119
 msgid "Phone-out"
 msgstr "Изход за слушалки"
 
-#: sys/oss/gstossmixertrack.c:120
 msgid "Video"
 msgstr "Видео"
 
-#: sys/oss/gstossmixertrack.c:121
 msgid "Radio"
 msgstr "Радио"
 
-#: sys/oss/gstossmixertrack.c:122 sys/sunaudio/gstsunaudiomixertrack.c:65
 msgid "Monitor"
 msgstr "Монитор"
 
-#: sys/oss/gstosssink.c:402
 msgid ""
 "Could not open audio device for playback. Device is being used by another "
 "application."
 msgstr ""
+"Аудио устройството не може да се отвори за изпълнение, използва се от друго "
+"приложение."
 
-#: sys/oss/gstosssink.c:409
 msgid ""
 "Could not open audio device for playback. You don't have permission to open "
 "the device."
 msgstr ""
+"Аудио устройството не може да се отвори за изпълнение, нямате права за това."
 
-#: sys/oss/gstosssink.c:417
-#, fuzzy
 msgid "Could not open audio device for playback."
-msgstr "Устройството „%s“ не може да се отвори за четене и запис."
+msgstr "Устройството не може да се отвори за изпълнение."
 
-#: sys/oss/gstosssrc.c:373
 msgid ""
 "Could not open audio device for recording. You don't have permission to open "
 "the device."
 msgstr ""
+"Аудио устройството не може да се отвори за запис, нямате права за това."
 
-#: sys/oss/gstosssrc.c:381
-#, fuzzy
 msgid "Could not open audio device for recording."
-msgstr "Устройството „%s“ не може да се отвори за четене и запис."
+msgstr "Аудио устройството не може да се отвори за запис."
 
-#: sys/sunaudio/gstsunaudiomixertrack.c:65
 msgid "Gain"
 msgstr "Усилване"
 
-#: sys/v4l2/gstv4l2src.c:1286
-#, fuzzy, c-format
+#, c-format
 msgid "Error reading %d bytes from device '%s'."
-msgstr "Грешка при прочитане с read() на %d байта на устройство „%s“."
+msgstr "Грешка при прочитане %d байта от устройство „%s“."
 
-#: sys/v4l2/gstv4l2src.c:1317
 #, c-format
 msgid "Got unexpected frame size of %u instead of %u."
 msgstr "Получена е рамка с размер %u вместо очаквания %u."
 
-#: sys/v4l2/gstv4l2src.c:1335
-#, fuzzy, c-format
+#, c-format
 msgid "Error reading %d bytes on device '%s'."
-msgstr "Грешка при прочитане с read() на %d байта на устройство „%s“."
+msgstr "Грешка при прочитане на %d байта на устройство „%s“."
 
-#: sys/v4l2/v4l2_calls.c:93
 #, c-format
 msgid ""
 "Error getting capabilities for device '%s': It isn't a v4l2 driver. Check if "
@@ -241,113 +193,92 @@ msgstr ""
 "Грешка при получаването на възможностите на устройството „%s“: не е драйвер "
 "v4l2. Проверете дали всъщност не е драйвер v4l1."
 
-#: sys/v4l2/v4l2_calls.c:132
 #, c-format
 msgid "Failed to query attributes of input %d in device %s"
 msgstr "Неуспешно запитване за атрибутите за вход %d на устройство „%s“."
 
-#: sys/v4l2/v4l2_calls.c:162
 #, c-format
 msgid "Failed to get setting of tuner %d on device '%s'."
 msgstr ""
 "Неуспех при получаването на настройките на тунер %d на устройство „%s“."
 
-#: sys/v4l2/v4l2_calls.c:206
 #, c-format
 msgid "Failed to query norm on device '%s'."
 msgstr "Неуспех при запитването за нормата на устройство „%s“."
 
-#: sys/v4l2/v4l2_calls.c:256 sys/v4l2/v4l2_calls.c:334
 #, c-format
 msgid "Failed getting controls attributes on device '%s'."
 msgstr "Неуспех при получаването на контролните атрибути на устройството „%s“."
 
-#: sys/v4l2/v4l2_calls.c:471
 #, c-format
 msgid "Cannot identify device '%s'."
 msgstr "Устройството „%s“ не може да се идентифицира."
 
-#: sys/v4l2/v4l2_calls.c:478
 #, c-format
 msgid "This isn't a device '%s'."
 msgstr "„%s“ не е устройство."
 
-#: sys/v4l2/v4l2_calls.c:485
 #, c-format
 msgid "Could not open device '%s' for reading and writing."
 msgstr "Устройството „%s“ не може да се отвори за четене и запис."
 
-#: sys/v4l2/v4l2_calls.c:492
 #, c-format
 msgid "Device '%s' is not a capture device."
 msgstr "Устройството „%s“ не е устройство за запис."
 
-#: sys/v4l2/v4l2_calls.c:590
 #, c-format
 msgid "Failed to set norm for device '%s'."
 msgstr "Неуспех при задаване на нормата на устройство „%s“."
 
-#: sys/v4l2/v4l2_calls.c:628
 #, c-format
 msgid "Failed to get current tuner frequency for device '%s'."
 msgstr ""
 "Неуспех при получаването на текущата настройка на честотата за устройство „%"
 "s“."
 
-#: sys/v4l2/v4l2_calls.c:670
 #, c-format
 msgid "Failed to set current tuner frequency for device '%s' to %lu Hz."
 msgstr ""
 "Неуспех при задаването на текущата настройка на честотата на устройство „%s“ "
 "да е %lu Hz."
 
-#: sys/v4l2/v4l2_calls.c:704
 #, c-format
 msgid "Failed to get signal strength for device '%s'."
 msgstr "Неуспех при получаването на силата на сигнала на устройство „%s“."
 
-#: sys/v4l2/v4l2_calls.c:740
 #, c-format
 msgid "Failed to get value for control %d on device '%s'."
 msgstr ""
 "Неуспех при получаването на стойността на контрол %d на устройство „%s“."
 
-#: sys/v4l2/v4l2_calls.c:775
 #, c-format
 msgid "Failed to set value %d for control %d on device '%s'."
 msgstr ""
 "Неуспех при задаването на стойността %d на контрол %d на устройство „%s“."
 
-#: sys/v4l2/v4l2_calls.c:804
 #, c-format
 msgid "Failed to get current input on device '%s'. May be it is a radio device"
 msgstr ""
 "Неуспех при получаването на текущия вход на устройство „%s“. Може би е радио."
 
-#: sys/v4l2/v4l2_calls.c:826
 #, c-format
 msgid "Failed to set input %d on device %s."
 msgstr "Неуспех при задаването на вход %d на устройство „%s“."
 
-#: sys/v4l2/v4l2src_calls.c:360
 #, c-format
 msgid "Could not enqueue buffers in device '%s'."
 msgstr "Буферите в устройство „%s“ не могат да се подредят в опашка."
 
-#: sys/v4l2/v4l2src_calls.c:561
 #, c-format
 msgid "Failed to enumerate possible video formats device '%s' can work with"
 msgstr ""
 "Неуспех при изброяването на възможните видео формати, с които устройство „%"
 "s“ може да работи."
 
-#: sys/v4l2/v4l2src_calls.c:1140 sys/v4l2/v4l2src_calls.c:1157
-#: sys/v4l2/v4l2src_calls.c:1166
 #, c-format
 msgid "Failed trying to get video frames from device '%s'."
 msgstr "Неуспех при опита за получаване на видео кадрите от устройство „%s“."
 
-#: sys/v4l2/v4l2src_calls.c:1142
 #, c-format
 msgid ""
 "The buffer type is not supported, or the index is out of bounds, or no "
@@ -358,95 +289,74 @@ msgstr ""
 "буфери или дължината или указателят към потребител са неправилни. Устройство "
 "„%s“."
 
-#: sys/v4l2/v4l2src_calls.c:1151
 #, c-format
 msgid "Failed trying to get video frames from device '%s'. Not enough memory."
 msgstr ""
 "Неуспех при получаване на видео кадрите от устройство „%s“. Няма достатъчно "
 "памет."
 
-#: sys/v4l2/v4l2src_calls.c:1151
 #, c-format
 msgid "insufficient memory to enqueue a user pointer buffer. device %s."
 msgstr ""
 "Недостатъчно памет за подреждането на буфер с потребителски указатели в "
 "опашка. Устройство „%s“."
 
-#: sys/v4l2/v4l2src_calls.c:1159
 #, c-format
 msgid "Failed after %d tries. device %s. system error: %s"
 msgstr "Неуспех след %d опита. Устройство „%s“. Системна грешка: %s"
 
-#: sys/v4l2/v4l2src_calls.c:1168
 #, c-format
 msgid "No free buffers found in the pool at index %d."
 msgstr "Няма свободни буфери в пула при индекс %d."
 
-#: sys/v4l2/v4l2src_calls.c:1250
 #, c-format
 msgid "Could not get parameters on device '%s'"
 msgstr "Не могат да се получат параметрите на устройството „%s“."
 
-#: sys/v4l2/v4l2src_calls.c:1280
 msgid "Video input device did not accept new frame rate setting."
 msgstr ""
 "Устройството за видео вход не приема новите настройки за честотата на кадри."
 
-#: sys/v4l2/v4l2src_calls.c:1297
 #, c-format
 msgid "Device '%s' does not support video capture"
 msgstr "Устройството „%s“ не поддържа видео запис."
 
-#: sys/v4l2/v4l2src_calls.c:1305 sys/v4l2/v4l2src_calls.c:1314
 #, c-format
 msgid "Device '%s' cannot capture at %dx%d"
 msgstr "Устройството „%s“ не може да записва при разделителна способност %d×%d"
 
-#: sys/v4l2/v4l2src_calls.c:1323
 #, c-format
 msgid "Device '%s' cannot capture in the specified format"
 msgstr "Устройството „%s“ не може да записва в указания формат"
 
-#: sys/v4l2/v4l2src_calls.c:1401
 #, c-format
 msgid "Could not get buffers from device '%s'."
 msgstr "Не могат да се получат буферите от устройството „%s“."
 
-#: sys/v4l2/v4l2src_calls.c:1410
 #, c-format
 msgid "Could not get enough buffers from device '%s'."
 msgstr "Не могат да се получат достатъчно буфери от устройство „%s“."
 
-#: sys/v4l2/v4l2src_calls.c:1419
 #, c-format
 msgid "Could not map buffers from device '%s'"
 msgstr "Не могат да се получат буферите от устройството „%s“."
 
-#: sys/v4l2/v4l2src_calls.c:1427
 #, c-format
 msgid "The driver of device '%s' does not support any known capture method."
 msgstr "Драйверът за устройството „%s“ не поддържа познати методи за запис."
 
-#: sys/v4l2/v4l2src_calls.c:1472
 #, c-format
 msgid "Error starting streaming capture from device '%s'."
 msgstr "Грешка при започването на поточен запис от устройство „%s“."
 
-#: sys/v4l2/v4l2src_calls.c:1516
 #, c-format
 msgid "Error stopping streaming capture from device '%s'."
 msgstr "Грешка при спирането на поточен запис от устройство „%s“."
 
-#: sys/ximage/gstximagesrc.c:719
 msgid "Changing resolution at runtime is not yet supported."
 msgstr ""
 "Промяната на разделителната способност по време на работа все още не се "
 "поддържа."
 
-#: sys/ximage/gstximagesrc.c:733
 msgid "Cannot operate without a clock"
 msgstr "Работата без часовник е невъзможна."
-
-#~ msgid "Failed getting controls attributes on device '%s.'"
-#~ msgstr ""
-#~ "Неуспех при получаването на контролните атрибути на устройството „%s“."
